--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,155 @@
 .App {
-  text-align: center;
+  background: var(--bg-gray);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home {
+  /* ff 3.6+ */
+  background: -moz-linear-gradient(
+    106deg,
+    rgba(215, 215, 215, 1) 50%,
+    rgba(0, 0, 0, 1) 50%
+  );
+
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-linear-gradient(
+    106deg,
+    rgba(215, 215, 215, 1) 50%,
+    rgba(0, 0, 0, 1) 50%
+  );
+
+  /* opera 11.10+ */
+  background: -o-linear-gradient(
+    106deg,
+    rgba(215, 215, 215, 1) 50%,
+    rgba(0, 0, 0, 1) 50%
+  );
+
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#D7D7D7', GradientType=0 );
+
+  /* ie 10+ */
+  background: -ms-linear-gradient(
+    106deg,
+    rgba(215, 215, 215, 1) 50%,
+    rgba(0, 0, 0, 1) 50%
+  );
+
+  /* global 94%+ browsers support */
+  background: linear-gradient(
+    106deg,
+    rgba(215, 215, 215, 1) 50%,
+    rgba(0, 0, 0, 1) 50%
+  );
+
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grad__abt {
+  background: radial-gradient(
+      50% 50% at 50% 50%,
+      rgba(26, 21, 21, 0) 0%,
+      rgba(1, 1, 1, 0.16) 100%
+    ),
+    #ffffff;
+  mix-blend-mode: normal;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.section__padding {
+  padding: 4rem 6rem;
+}
+
+.flex__center {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.slide-bottom {
+  -webkit-animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@-webkit-keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-25%);
+    transform: translateY(-25%);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(-25%);
+    transform: translateY(-25%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+/* For even bigger screens */
+@media screen and (min-width: 2350px) {
+  .section__padding {
+    padding: 4rem 20rem;
+  }
+}
+
+/* For Tablets or bigger phones */
+@media screen and (max-width: 850px) {
+  .section__padding {
+    padding: 4rem;
+  }
+}
+
+/* For mobile devices */
+@media screen and (max-width: 650px) {
+  .section__padding {
+    padding: 4rem 2rem;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .home {
+    /* ff 3.6+ */
+    background: -moz-linear-gradient(
+      176deg,
+      rgba(0, 0, 0, 1) 68%,
+      rgba(0, 0, 0, 0.56) 68%
+    );
+
+    /* safari 5.1+,chrome 10+ */
+    background: -webkit-linear-gradient(
+      176deg,
+      rgba(0, 0, 0, 1) 68%,
+      rgba(0, 0, 0, 0.56) 68%
+    );
+
+    /* opera 11.10+ */
+    background: -o-linear-gradient(
+      176deg,
+      rgba(0, 0, 0, 1) 68%,
+      rgba(0, 0, 0, 0.56) 68%
+    );
+
+    /* ie 6-9 */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=1 );
+
+    /* ie 10+ */
+    background: -ms-linear-gradient(
+      176deg,
+      rgba(0, 0, 0, 1) 68%,
+      rgba(0, 0, 0, 0.56) 68%
+    );
+
+    /* global 94%+ browsers support */
+    background: linear-gradient(
+      176deg,
+      rgba(0, 0, 0, 1) 68%,
+      rgba(0, 0, 0, 0.56) 68%
+    );
   }
 }
