--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -14,7 +14,7 @@
   font-size: 35px;
   line-height: 45px;
   color: #000000;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .app__hero-content_space {
@@ -73,7 +73,7 @@
     line-height: 1.9rem;
     display: flex;
     color: #ffffff;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.4rem;
   }
 
   .app__hero-content h1 {
@@ -116,6 +116,24 @@
     align-items: center;
     margin-bottom: 1.4rem;
     height: 0.1rem;
+  }
+}
+
+@media screen and (max-width: 930px) {
+  .app__hero-content {
+    justify-content: center;
+  }
+
+  .app__hero {
+    padding-top: 40%;
+    margin-top: 5rem;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .app__hero {
+    padding-top: 12rem;
+    margin-top: 5rem;
   }
 }
 
