--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,12 +1,95 @@
-.app__portfolio-container__projects {
-  display: flex;
-  flex-direction: column;
-  margin: 2rem;
-  justify-content: flex-start;
-  align-items: flex-start;
+.app__portfolio-container__projects img {
+  width: 25rem;
+  height: 15rem;
 }
 
-.app__portfolio-container__projects img {
-  width: 30rem;
-  height: 20rem;
+@media screen and (max-width: 1330px) {
+  .app__portfolio-container__projects img {
+    width: 23rem;
+    height: 15rem;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .app__portfolio-container__projects img {
+    width: 20rem;
+    height: 15rem;
+  }
+}
+
+@media screen and (max-width: 1060px) {
+  .app__portfolio-container__projects img {
+    width: 18rem;
+    height: 13rem;
+  }
+}
+
+@media screen and (max-width: 970px) {
+  .app__portfolio-container__projects img {
+    width: 25rem;
+    height: 15rem;
+  }
+}
+
+@media screen and (max-width: 940px) {
+  .app__portfolio-container__projects img {
+    width: 23rem;
+    height: 15rem;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .app__portfolio-container__projects img {
+    width: 20rem;
+    height: 14rem;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .app__portfolio-container__projects img {
+    width: 18rem;
+    height: 14rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__portfolio-container__projects img {
+    width: 15rem;
+    height: 12rem;
+  }
+}
+
+@media screen and (max-width: 555px) {
+  .app__portfolio-container__projects img {
+    width: 13rem;
+    height: 10rem;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .app__portfolio-container__projects img {
+    width: 23rem;
+    height: 15rem;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .app__portfolio-container__projects img {
+    width: 20rem;
+    height: 13rem;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .app__portfolio-container__projects img {
+    width: 15rem;
+    height: 13rem;
+  }
+}
+
+@media screen and (max-width: 275px) {
+  .app__portfolio-container__projects img {
+    width: 13rem;
+    height: 12rem;
+  }
 }
