--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -5,90 +5,66 @@
   align-items: center;
 
   background: radial-gradient(
-      50% 50% at 50% 50%,
-      rgba(26, 21, 21, 0) 0%,
-      rgba(1, 1, 1, 0.16) 100%
-    ),
-    #ffffff;
+    50% 50% at 50% 50%,
+    rgba(26, 21, 21, 0) 0%,
+    rgba(1, 1, 1, 0.16) 100%
+  );
 }
 
 .app__about-heading {
-  border: 7px solid #000000;
   box-sizing: border-box;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-top: 2rem;
-  margin-bottom: 2.5rem;
-  width: 20rem;
-  height: 5rem;
 }
 
 .app__about-heading h1 {
-  font-family: var(--font-montserrat);
-  font-weight: 700;
-  font-size: 1.8rem;
-  line-height: 2.4rem;
-  letter-spacing: 0.2em;
-  color: #000000;
+  opacity: 1;
+  font-family: var(--font-nunito);
+  font-size: 92px;
+  font-weight: 100;
+  line-height: 105%;
+  color: var(--text-bold);
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+.app__about-content {
+  justify-content: center;
 }
 
 .app__about-content p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 15px;
   line-height: 138.68%;
-  text-align: center;
   color: #050505;
-  display: flex;
   justify-content: center;
   align-items: center;
   margin: 1rem 10rem;
+  color: var(--light-mode);
+}
+
+.app__about-content p span {
+  font-weight: bold;
+  color: var(--text-bold);
+}
+
+@media screen and (min-width: 1450px) {
+  .app__about-content p {
+    margin: 1.5rem 20rem;
+  }
 }
 
 @media screen and (max-width: 1062px) {
-  .app__about-content p {
-    margin: 1rem 8rem;
-  }
-}
-
-@media screen and (max-width: 1050px) {
-  .app__about-heading {
-    border: 6px solid #000000;
-    margin-top: 1.8rem;
-    margin-bottom: 2.5rem;
-    width: 20rem;
-    height: 5.4rem;
-  }
-
-  .app__about-heading h1 {
-    font-weight: 700;
-    font-size: 1.7rem;
-    line-height: 2.3rem;
-    letter-spacing: 0.2em;
-  }
-
   .app__about-content p {
     margin: 1rem 5rem;
   }
 }
 
 @media screen and (max-width: 900px) {
-  .app__about-heading {
-    border: 6px solid #000000;
-    margin-top: 1.6rem;
-    margin-bottom: 2.3rem;
-    width: 18rem;
-    height: 5rem;
-  }
-
   .app__about-heading h1 {
-    font-weight: 700;
-    font-size: 1.6rem;
-    line-height: 2.3rem;
-    letter-spacing: 0.18em;
+    font-size: 82px;
+    line-height: 105%;
   }
 
   .app__about-content p {
@@ -97,19 +73,20 @@
 }
 
 @media screen and (max-width: 750px) {
-  .app__about-heading {
-    border: 6px solid #000000;
-    margin-top: 1.5rem;
-    margin-bottom: 2.2rem;
-    width: 16rem;
-    height: 4.9rem;
+  .app__about-heading h1 {
+    font-size: 72px;
+    line-height: 100%;
   }
 
+  .app__about-content p {
+    margin: 0.8rem 2rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
   .app__about-heading h1 {
-    font-weight: 700;
-    font-size: 1.6rem;
-    line-height: 2.2rem;
-    letter-spacing: 0.17em;
+    font-size: 62px;
+    line-height: 100%;
   }
 
   .app__about-content p {
@@ -118,22 +95,36 @@
 }
 
 @media screen and (max-width: 550px) {
-  .app__about-heading {
-    border: 6px solid #000000;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-    width: 14rem;
-    height: 4.7rem;
+  .app__about-content p {
+    margin: 0.7rem 1rem;
   }
+}
 
+@media screen and (max-width: 500px) {
   .app__about-heading h1 {
-    font-weight: 700;
-    font-size: 1.4rem;
-    line-height: 2rem;
-    letter-spacing: 0.15em;
+    font-size: 52px;
+    line-height: 90%;
   }
 
   .app__about-content p {
-    margin: 0.7rem 1rem;
+    margin: 0.8rem 1rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .app__about-heading h1 {
+    font-size: 32px;
+    line-height: 80%;
+  }
+}
+
+@media screen and (max-width: 435px) {
+  .app__about-heading h1 {
+    font-size: 25px;
+    line-height: 80%;
+  }
+
+  .app__about-content p {
+    margin: 0.8rem 0.5rem;
   }
 }
