--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -17,38 +17,45 @@
   }
 }
 
-@media screen and (max-width: 1060px) {
+@media screen and (max-width: 1115px) {
   .app__portfolio-container__projects img {
     width: 18rem;
     height: 13rem;
   }
 }
 
+@media screen and (max-width: 1060px) {
+  .app__portfolio-container__projects img {
+    width: 16rem;
+    height: 12rem;
+  }
+}
+
 @media screen and (max-width: 970px) {
   .app__portfolio-container__projects img {
-    width: 25rem;
-    height: 15rem;
+    width: 15rem;
+    height: 11rem;
   }
 }
 
 @media screen and (max-width: 940px) {
   .app__portfolio-container__projects img {
-    width: 23rem;
-    height: 15rem;
+    width: 15rem;
+    height: 11rem;
   }
 }
 
 @media screen and (max-width: 820px) {
   .app__portfolio-container__projects img {
-    width: 20rem;
-    height: 14rem;
+    width: 13rem;
+    height: 10rem;
   }
 }
 
 @media screen and (max-width: 720px) {
   .app__portfolio-container__projects img {
-    width: 18rem;
-    height: 14rem;
+    width: 16rem;
+    height: 13rem;
   }
 }
 
@@ -73,23 +80,30 @@
   }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 420px) {
   .app__portfolio-container__projects img {
-    width: 20rem;
-    height: 13rem;
+    width: 21rem;
+    height: 14rem;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .app__portfolio-container__projects img {
+    width: 19rem;
+    height: 12rem;
   }
 }
 
 @media screen and (max-width: 350px) {
   .app__portfolio-container__projects img {
-    width: 15rem;
-    height: 13rem;
+    width: 16rem;
+    height: 11rem;
   }
 }
 
-@media screen and (max-width: 275px) {
+@media screen and (max-width: 291px) {
   .app__portfolio-container__projects img {
     width: 13rem;
-    height: 12rem;
+    height: 9rem;
   }
 }
