--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -1,50 +1,23 @@
 .app__footer {
   background: var(--bg-black);
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-}
 
-.app__footer-contents img {
-  margin-bottom: 0.2rem;
-  background: #a000;
-  cursor: pointer;
-  width: 10px;
-  height: 10px;
-  margin-bottom: 0.5rem;
-  margin-top: -1rem;
+  border-top: 0.1rem solid rgba(134, 155, 169, 0.3);
+  margin: 0 7rem;
 }
 
 .app__footer-contents a {
-  font-family: var(--font-montserrat);
-  font-weight: 700;
-  font-size: 0.7rem;
-  line-height: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.18538em;
-  color: #ffffff;
-}
-
-.app__footer-contents h3 {
-  margin-bottom: 2rem;
+  color: var(--light-mode);
 }
 
 .app__footer-contents_social {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   margin-bottom: 0.8rem;
 }
 
 .app__footer-contents_social a {
-  width: 1.5rem;
-  height: 1.5rem;
   margin: 0.5rem;
   font-size: 3rem;
 }
@@ -54,6 +27,23 @@
   font-weight: 500;
   font-size: 0.7rem;
   line-height: 1.4rem;
-  color: #ffffff;
-  margin-bottom: -2rem;
+  color: var(--light-mode);
+}
+
+@media screen and (max-width: 1060px) {
+  .app__footer {
+    margin: 0 5rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__footer {
+    margin: 0 4rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__footer {
+    margin: 0 2rem;
+  }
 }
