--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -3,13 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  background: radial-gradient(
-      50% 50% at 50% 50%,
-      rgba(26, 21, 21, 0) 0%,
-      rgba(1, 1, 1, 0.16) 100%
-    ),
-    #001f33;
 }
 
 .app__contact-heading {
@@ -76,6 +69,7 @@ input {
   font-size: 12px;
   line-height: 1rem;
   color: var(--text-bold);
+  outline: none;
 }
 
 textarea {
@@ -94,6 +88,7 @@ textarea {
   font-size: 12px;
   line-height: 1rem;
   color: var(--text-bold);
+  outline: none;
 }
 
 input[type='submit'] {
