--- a/src/containers/hero/hero.css
+++ b/src/containers/hero/hero.css
@@ -25,7 +25,7 @@
   color: var(--text-bold);
 }
 
-.app__hero-content p {
+.app__hero-content div {
   font-family: var(--font-nunito);
   font-weight: 800;
   font-size: 18px;
@@ -162,7 +162,7 @@
     margin-right: 1vw;
   }
 
-  .app__hero-content p {
+  .app__hero-content div {
     font-size: 15px;
     line-height: 17px;
   }
@@ -175,7 +175,7 @@
     margin-right: 10vw;
   }
 
-  .app__hero-content p {
+  .app__hero-content div {
     font-size: 13px;
     line-height: 15px;
   }
@@ -186,7 +186,7 @@
     margin-right: 7vw;
   }
 
-  .app__hero-content p {
+  .app__hero-content div {
     font-size: 13px;
     line-height: 15px;
   }
@@ -203,7 +203,7 @@
     margin-right: -5vw;
   }
 
-  .app__hero-content p {
+  .app__hero-content div {
     font-size: 12px;
     line-height: 12px;
   }
@@ -214,7 +214,7 @@
     margin-right: 1vw;
   }
 
-  .app__hero-content p {
+  .app__hero-content div {
     font-size: 10px;
     line-height: 10px;
   }
@@ -225,7 +225,7 @@
     margin-right: -7vw;
   }
 
-  .app__hero-content p {
+  .app__hero-content div {
     font-size: 12px;
     line-height: 13px;
   }
